--- a/5 - Troubleshooting and Debugging.ipynb
+++ b/5 - Troubleshooting and Debugging.ipynb
@@ -1318,8 +1318,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
